samples/_failures_safe/1761601442_a0f485_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dff15a7a.c: In function ‘main’:
./samples/SAFE/__tmp_dff15a7a.c:161:25: error: missing terminating " character
  161 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_dff15a7a.c:161:9: error: expected expression at end of input
  161 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_dff15a7a.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dff15a7a.c:161:9: error: expected declaration or statement at end of input
